# steam-authenticator

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  util.rs
src/timer-ring/: timer-ring.css  timer-ring.ts
